<resources>
    <string name="app_name">hw2</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="say_hello">SAY HELLO</string>
    <string name="_0">0</string>
    <string name="count">count</string>
    <string name="hello">Hello!</string>
    <string name="open_website">OPEN WEBSITE</string>
    <string name="http_developer_adnroid_com">http://developer.adnroid.com</string>
    <string name="golden_gate_bridge">Golden Gate Bridge</string>
    <string name="open_location">OPEN LOCATION</string>
    <string name="share_this_text">SHARE THIS TEXT</string>
    <string name="take_a_picture">TAKE A PICTURE</string>
    <string name="twas_brillig_and_the_slithy_toves">Twas brillig and the slithy toves</string>
    <string name="share_this_text_with">\"Share this text with: \"</string>
</resources>